<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Blue RC</string>

    <!--  BlueRC -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <!-- Main UI elements -->
    <string name="throttle">Throttle</string>
    <string name="forward">Forward</string>
    <string name="stop">Stop</string>
    <string name="reverse">Reverse</string>
    <string name="cocks">Drain Cocks</string>
    <string name="cocksOn">Opened</string>
    <string name="cocksOff">Closed</string>
    <string name="whistle">Whistle</string>
    <string name="emergency">Emergency Stop</string>
    <string name="connect">Connect</string>
    <string name="setup">Setup</string>
    <string name="jbar">Johnson Bar</string>
    <string name="timeout">Timeout</string>
    <string name="enabled">Enabled</string>
    <string name="throttleFull">Fully Opened</string>
    <string name="throttleMid">Mid travel</string>
    <string name="throttleClosed">Closed</string>
    <string name="reverse1">First Reverser</string>
    <string name="reverse2">Second Reverser</string>
    <string name="drain1">First Drain Cock</string>
    <string name="drain2">Second Drain Cock</string>
    <string name="loconame">Locomotive Name</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="insecure_connect">Connect a device</string>
</resources>
