<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     >
        <android.widget.Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/connect"
        />
        <android.widget.Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/setup"
        />

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
        >
            <android.widget.RadioGroup
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
            >
                <RadioButton android:id="@+id/radio_forward"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/forward"
                             android:onClick="onRadioButtonClicked"
                />
                <RadioButton android:id="@+id/radio_stop"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/stop"
                             android:onClick="onRadioButtonClicked"
                />
                <RadioButton android:id="@+id/radio_reverse"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/reverse"
                             android:onClick="onRadioButtonClicked"
                 />
            </android.widget.RadioGroup>
            <android.widget.ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/cocksOn"
                    android:textOff="@string/cocksOff"
                    android:onClick="onToggleClicked"
            />
            <android.widget.SeekBar
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar_whistle"
            />
        </LinearLayout>
        <android.widget.VerticalSeekBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/seekBar_Throttle"
                />
    </LinearLayout>
    <android.widget.Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/emergency"
            />
</LinearLayout>
